# ChangeLog for media-sound/abcm2ps
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/abcm2ps/ChangeLog,v 1.38 2012/01/25 10:33:29 radhermit Exp $

  25 Jan 2012; Tim Harder <radhermit@gentoo.org> -abcm2ps-5.9.15.ebuild,
  -abcm2ps-5.9.25.ebuild:
  Remove old.

*abcm2ps-6.6.3 (17 Jan 2012)

  17 Jan 2012; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.5.15.ebuild,
  -abcm2ps-6.5.16.ebuild, +abcm2ps-6.6.3.ebuild:
  Version bump and remove old.

*abcm2ps-6.5.16 (23 Dec 2011)

  23 Dec 2011; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.5.13.ebuild,
  +abcm2ps-6.5.16.ebuild:
  Version bump and remove old.

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> abcm2ps-5.9.15.ebuild,
  abcm2ps-5.9.24.ebuild, abcm2ps-5.9.25.ebuild, abcm2ps-6.5.13.ebuild,
  abcm2ps-6.5.15.ebuild:
  Drop sparc keywords

*abcm2ps-6.5.15 (05 Dec 2011)

  05 Dec 2011; Tim Harder <radhermit@gentoo.org> +abcm2ps-6.5.15.ebuild:
  Version bump.

*abcm2ps-6.5.13 (26 Nov 2011)
*abcm2ps-5.9.25 (26 Nov 2011)

  26 Nov 2011; Tim Harder <radhermit@gentoo.org> -abcm2ps-5.9.23.ebuild,
  +abcm2ps-5.9.25.ebuild, -abcm2ps-6.5.10.ebuild, -abcm2ps-6.5.12.ebuild,
  +abcm2ps-6.5.13.ebuild, metadata.xml:
  Version bump and remove old.

*abcm2ps-6.5.12 (18 Nov 2011)

  18 Nov 2011; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.5.7.ebuild,
  +abcm2ps-6.5.12.ebuild:
  Version bump and remove old.

*abcm2ps-6.5.10 (12 Nov 2011)

  12 Nov 2011; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.5.2.ebuild,
  +abcm2ps-6.5.10.ebuild:
  Version bump and remove old.

*abcm2ps-6.5.7 (03 Nov 2011)

  03 Nov 2011; Tim Harder <radhermit@gentoo.org> -abcm2ps-6.4.7.ebuild,
  +abcm2ps-6.5.7.ebuild:
  Version bump and remove old.

  24 Oct 2011; Markus Meier <maekke@gentoo.org> abcm2ps-5.9.24.ebuild:
  x86 stable, bug #387975

  22 Oct 2011; Markos Chandras <hwoarang@gentoo.org> abcm2ps-5.9.24.ebuild:
  Stable on amd64 wrt bug #387975

*abcm2ps-6.5.2 (21 Oct 2011)
